[gd_scene load_steps=3 format=3 uid="uid://bq8kkw5xyfhtj"]

[ext_resource type="Script" path="res://scripts/enemy_ship.gd" id="1_enemy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_enemy"]
size = Vector2(50, 100)

[node name="EnemyShip" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_enemy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_enemy")

[node name="ShipSprite" type="Polygon2D" parent="."]
color = Color(0.8, 0.2, 0.2, 1)
polygon = PackedVector2Array(-15, 40, 0, -50, 15, 40, 0, 30)

[node name="TurretFront" type="Polygon2D" parent="."]
position = Vector2(0, -15)
color = Color(0.9, 0.3, 0.3, 1)
polygon = PackedVector2Array(-8, -4, 8, -4, 8, 4, -8, 4)

[node name="TurretRear" type="Polygon2D" parent="."]
position = Vector2(0, 15)
color = Color(0.9, 0.3, 0.3, 1)
polygon = PackedVector2Array(-8, -4, 8, -4, 8, 4, -8, 4)

[node name="MainGunTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="SecondaryGunTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="AITimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("RectangleShape2D_enemy")
scale = Vector2(15, 15)

[connection signal="timeout" from="MainGunTimer" to="." method="_on_main_gun_timer_timeout"]
[connection signal="timeout" from="SecondaryGunTimer" to="." method="_on_secondary_gun_timer_timeout"]
[connection signal="timeout" from="AITimer" to="." method="_on_ai_timer_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
